--- a/debian/rules
+++ b/debian/rules
@@ -2,7 +2,7 @@
 #export DH_VERBOSE=1
 
 %:
-	dh $@  --buildsystem cmake --parallel --with quilt
+	dh $@  --buildsystem cmake --parallel
 
 override_dh_auto_configure:
 	dh_auto_configure -- -DUSE_QT5=ON -DBUILD_DESIGNER_PLUGIN=0
