--- a/debian/rules
+++ b/debian/rules
@@ -1,11 +1,10 @@
 #!/usr/bin/make -f
 #export DH_VERBOSE=1
 
+export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
+
 %:
-	dh $@  --buildsystem cmake --parallel
+	dh ${@} --buildsystem cmake \
+		--parallel \
+		--fail-missing
 
-override_dh_auto_configure:
-	dh_auto_configure -- -DUSE_QT5=ON -DBUILD_DESIGNER_PLUGIN=0
-
-override_dh_install:
-	dh_install --list-missing --fail-missing
