--- a/debian/rules
+++ b/debian/rules
@@ -1,10 +1,15 @@
 #!/usr/bin/make -f
-#export DH_VERBOSE=1
+# export DH_VERBOSE=1
 
+export LC_ALL=C.UTF-8
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 %:
-	dh ${@} --buildsystem cmake \
-		--parallel \
+	dh ${@} --buildsystem cmake\
+		--parallel\
 		--fail-missing
+
+override_dh_auto_configure:
+	dh_auto_configure -- \
+		-DCMAKE_BUILD_TYPE=RelWithDebInfo
