Cherry-picking upstream release: 0.7.0
* Bumped compat to 10
* Removed --parallel from rules, standard in compat 10
* Bumped minimum version debhelper (>= 10)
* Added build dependency liblxqt-dev (>= 0.11.0)
* Followed Multiarch hinter suggestions
  - qtermwidget5-data marked as Multi-Arch: foreign
  - libqtermwidget5-0 marked as Multi-Arch: same
  - libqtermwidget5-0-dev marked as Multi-Arch: same
* Simplified optional symbols

--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -1,8 +1,8 @@
-/debhelper-build-stamp
-/*.debhelper/
+/*.debhelper
 /*.log
 /*.mangled
 /*.substvars
+/debhelper-build-stamp
 /files
 
 /libqtermwidget5-0-dev/
