--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Section: libs
 Priority: optional
 Build-Depends: debhelper (>= 10),
                cmake (>= 3.0.2),
+               liblxqt0-dev (>= 0.11.0),
                qtbase5-dev
 Standards-Version: 3.9.8
 Vcs-Browser: https://anonscm.debian.org/git/pkg-lxqt/qtermwidget.git/?h=debian/sid
@@ -15,6 +16,7 @@ Homepage: https://github.com/lxde/qtermwidget
 
 Package: libqtermwidget5-0
 Architecture: any
+Multi-Arch: same
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          qtermwidget5-data (= ${source:Version}),
@@ -27,6 +29,7 @@ Description: Terminal emulator widget for Qt 5 (shared libraries)
 
 Package: libqtermwidget5-0-dev
 Architecture: any
+Multi-Arch: same
 Section: libdevel
 Depends: ${misc:Depends},
          libqtermwidget5-0 (= ${binary:Version}),
@@ -38,6 +41,7 @@ Description: Terminal emulator widget for Qt 5 (development files)
 
 Package: qtermwidget5-data
 Architecture: all
+Multi-Arch: foreign
 Depends: ${misc:Depends},
 Description: Terminal emulator widget for Qt 5 (data files)
  QTermWidget is a Unicode-enabled, embeddable Qt widget that can be used as
