--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Section: libs
 Priority: optional
 Build-Depends: debhelper (>= 10),
                cmake (>= 3.0.2),
+               libutf8proc-dev,
                qtbase5-dev
 Standards-Version: 3.9.8
 Vcs-Browser: https://anonscm.debian.org/git/pkg-lxqt/qtermwidget.git/?h=debian/sid
