--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,9 @@ Priority: optional
 Build-Depends: debhelper (>= 10),
                cmake (>= 3.0.2),
                libutf8proc-dev,
+               lxqt-build-tools (>= 0.3.2),
                qtbase5-dev
-Standards-Version: 3.9.8
+Standards-Version: 4.0.0
 Vcs-Browser: https://anonscm.debian.org/git/pkg-lxqt/qtermwidget.git/?h=debian/sid
 Vcs-Git: https://anonscm.debian.org/git/pkg-lxqt/qtermwidget.git -b debian/sid
 Homepage: https://github.com/lxde/qtermwidget
@@ -21,6 +22,8 @@ Depends: ${shlibs:Depends},
          ${misc:Depends},
          qtermwidget5-data (= ${source:Version}),
 Pre-Depends: ${misc:Pre-Depends}
+Recommends: qtermwidget-l10n,
+            fonts-hack-ttf
 Description: Terminal emulator widget for Qt 5 (shared libraries)
  QTermWidget is a Unicode-enabled, embeddable Qt widget that can be used as
  built-in console or terminal emulation widget.
