--- a/cmake/qtermwidget5-config.cmake.in
+++ b/cmake/qtermwidget5-config.cmake.in
@@ -1,41 +1,20 @@
-# - Find the QTermWidget include and library dirs and define a some macros
-#
-# The module defines the following variables
-#  QTERMWIDGET_FOUND         - Set to TRUE if all of the above has been found
-#
-#  QTERMWIDGET_INCLUDE_DIR   - The QTermWidget include directory
-#
-#  QTERMWIDGET_INCLUDE_DIRS  - The QTermWidget include directory
-#
-#  QTERMWIDGET_LIBRARIES     - The libraries needed to use QTermWidget
-#
-#  QTERMWIDGET_USE_FILE      - The variable QTERMWIDGET_USE_FILE is set which is the path
-#                              to a CMake file that can be included to compile qtermwidget
-#                              applications and libraries. It sets up the compilation
-#                              environment for include directories and populates a
-#                              QTERMWIDGET_LIBRARIES variable.
-#
-# QTERMWIDGET_QT_LIBRARIES   - The Qt libraries needed by QTermWidget
+# - Find the QTermWidget include and library
 #
 # Typical usage:
-#    find_package(QTERMWIDGET5)
+#    find_package(QTermWidget5 REQUIRED)
 #
-#    include(${QTERMWIDGET_USE_FILE})
 #    add_executable(foo main.cpp)
-#    target_link_libraries(foo ${QTERMWIDGET_QT_LIBRARIES} ${QTERMWIDGET_LIBRARIES})
+#    target_link_libraries(foo qtermwidget5)
 
-set(QTERMWIDGET_INCLUDE_DIR   @QTERMWIDGET_INCLUDE_DIR@)
-set(QTERMWIDGET_LIBRARY       @QTERMWIDGET_LIBRARY_NAME@)
+@PACKAGE_INIT@
 
-set(QTERMWIDGET_LIBRARIES     ${QTERMWIDGET_LIBRARY})
-set(QTERMWIDGET_INCLUDE_DIRS  "${QTERMWIDGET_INCLUDE_DIR}")
+if (CMAKE_VERSION VERSION_LESS 3.0.2)
+    message(FATAL_ERROR \"qtermwidget requires at least CMake version 3.0.2\")
+endif()
 
-set(QTERMWIDGET_USE_FILE      "${CMAKE_CURRENT_LIST_DIR}/qtermwidget5_use.cmake")
-set(QTERMWIDGET_FOUND 1)
-
-set(QTERMWIDGET_VERSION_MAJOR @QTERMWIDGET_VERSION_MAJOR@)
-set(QTERMWIDGET_VERSION_MINOR @QTERMWIDGET_VERSION_MINOR@)
-set(QTERMWIDGET_VERSION_PATCH @QTERMWIDGET_VERSION_PATCH@)
-set(QTERMWIDGET_VERSION @QTERMWIDGET_VERSION@)
-
-mark_as_advanced(QTERMWIDGET_LIBRARY QTERMWIDGET_INCLUDE_DIR)
+if (NOT TARGET @QTERMWIDGET_LIBRARY_NAME@)
+    if (POLICY CMP0024)
+        cmake_policy(SET CMP0024 NEW)
+    endif()
+    include("${CMAKE_CURRENT_LIST_DIR}/@QTERMWIDGET_LIBRARY_NAME@-targets.cmake")
+endif()
