--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Priority: optional
 Build-Depends: debhelper (>= 11~),
                cmake,
                libutf8proc-dev,
-               lxqt-build-tools (>= 0.4.0),
+               lxqt-build-tools (>= 0.5.0~),
                qtbase5-dev
 Standards-Version: 4.1.4
 Vcs-Browser: https://salsa.debian.org/lxqt-team/qtermwidget
