fix(stable): old qtermwidget not have setBlinkingCursor function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,10 @@ find_package(Qt5 ${QT_MINIMUM_VERSION} CONFIG REQUIRED Widgets)
 find_package(Dtk REQUIRED Core Widget)
 find_package(QTermWidget5 REQUIRED)
 
+if(QTERMWIDGET_VERSION)
+ADD_DEFINITIONS(-DOLD_QTERMWIDGET_VERSION)
+endif()
+
 # Populate a CMake variable with the sources
 # TODO: portable headers?
 file (GLOB DTNG_HEADER_FILES "*.h")
@@ -25,6 +29,12 @@ set(EXE_NAME dterm)
 add_executable (${EXE_NAME}
     ${DTNG_HEADER_FILES}
     ${DTNG_CPP_FILES}
+)
+
+target_include_directories(${EXE_NAME} PUBLIC
+                                        ${DtkWidget_INCLUDE_DIRS}
+                                        ${PROJECT_BINARY_DIR}
+                                        ${QTERMWIDGET_INCLUDE_DIRS}
 )
 
 target_link_libraries (dterm Qt5::Widgets ${DtkWidget_LIBRARIES} qtermwidget5)
