--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ set (DTNG_CPP_FILES
     termwidget.cpp
     termwidgetpage.cpp
     titlebar.cpp
+    themepanel.cpp
 )
 
 set (DTNG_HEADER_FILES
@@ -32,6 +33,7 @@ set (DTNG_HEADER_FILES
     termwidget.h
     termwidgetpage.h
     titlebar.h
+    themepanel.h
 )
 
 # Program
