feat: Term properties for term widget initialization
 (#8)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set (DTNG_CPP_FILES
     themelistview.cpp
     themelistmodel.cpp
     themeitemdelegate.cpp
+    termproperties.cpp
 )
 
 set (DTNG_HEADER_FILES
@@ -40,6 +41,7 @@ set (DTNG_HEADER_FILES
     themelistview.h
     themelistmodel.h
     themeitemdelegate.h
+    termproperties.h
 )
 
 # Program
