feat(settings): opacity setting support
* feat(settings): opacity setting support
* feat: apply opacity setting to all terminals
* refactor: make setting dialog as a singleton

--- a/default-config.json
+++ b/default-config.json
@@ -1,6 +1,26 @@
 {
     "groups": [
         {
+            "key": "basic",
+            "name": "Basic",
+            "groups": [
+                {
+                    "key": "interface",
+                    "name": "Interface",
+                    "options": [
+                        {
+                            "key": "opacity",
+                            "name": "Opacity",
+                            "type": "slider",
+                            "max": 100,
+                            "min": 0,
+                            "default": 80
+                        }
+                    ]
+                }
+            ]
+        },
+        {
             "key": "advanced",
             "name": "Advanced",
             "groups": [
